# api_spec_to_dart

./: .fvmrc  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  build.yaml  melos.yaml  pubspec.yaml  rps.yaml
.dart_tool/: package_config.json  package_config_subset  package_graph.json
.github/workflows/: publish.yml
example/: README.md  analysis_options.yaml  build.yaml  pubspec.yaml  rps.yaml  swagger_to_dart.yaml  swagger_to_dart_example.dart
example/example/: swagger_api_client_example.dart
example/lib/: swagger_api_client.dart
example/schema/: swagger.json
example/test/: swagger_api_client_test.dart
frameworks/fastapi/: .gitignore  README.md  pyproject.toml
frameworks/fastapi/app/: generic_router.py  item_route.py  items_route.py  items_router.py  main.py  pydantic_extra_types_route.py
frameworks/fastapi/app/router/: generic_router.py  pydantic_extra_types_router.py  union_router.py
lib/: gen.json  pubspec.dart  swagger_to_dart.dart
lib/src/: swagger_to_dart_base.dart
postman_collection-0.0.9/.dart_tool/: package_config.json  package_graph.json
scripts/: setup_symlinks.sh  sync_files.sh  sync_readme.sh
swagger_to_dart/: README.md  analysis_options.yaml  pubspec.yaml  rps.yaml
swagger_to_dart/example/: README.md  analysis_options.yaml  pubspec.yaml  rps.yaml  swagger_to_dart.yaml
swagger_to_dart/lib/: swagger_to_dart.dart
test/: file_handler_test.dart  open_api_client_generator_test.dart  open_api_model_generator_test.dart  setup_handler_test.dart  swagger_to_dart_test.dart
test/dump/: open_api.json
(+749 files in other folders)
